--- a/package.json
+++ b/package.json
@@ -7,8 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "less": "^3.11.1",
+    "less-loader": "^6.0.0",
+    "normalize.css": "^8.0.1",
+    "swiper": "^5.3.8",
     "vue": "^2.6.11",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
   },
