--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "better-scroll": "^1.15.2",
     "core-js": "^3.6.4",
-    "less": "^3.11.1",
-    "less-loader": "^6.0.0",
     "normalize.css": "^8.0.1",
     "swiper": "^5.3.8",
     "vue": "^2.6.11",
